Fixed issue with flickering background image

--- a/src/screens/Profile/Profile.module.sass
+++ b/src/screens/Profile/Profile.module.sass
@@ -1,7 +1,7 @@
 @import ../../styles/helpers
 
 .head
-    position: relative
+    position: static
     display: flex
     align-items: flex-end
     height: 326px
@@ -9,6 +9,7 @@
     background-repeat: no-repeat
     background-position: 50% 50%
     background-size: cover
+    will-change: top
     overflow: hidden
     +t
         height: 260px
